--- a/sass/layout/desktop/_header.scss
+++ b/sass/layout/desktop/_header.scss
@@ -1,62 +1,44 @@
-/*====================
-========Header========
-======================*/
-
 header{
-	height: 14vh;
-	padding-top: 0.5em;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 5%;
+    width: 90%;
+    z-index: $z-index-header;
+
+    .header-logo{
+        display: flex;
+        width: max-content;
+
+        .header-logo-image svg{
+            height: 3rem;
+            width: 3rem;
+    
+            path{
+                fill:$secondary-color;
+            }
+        }
+
+        .header-logo-title{
+            margin-left: 1rem;
+
+            h1{
+                text-align: left;
+            }
+        }
+    }
+
+    .header-menu{
+        margin-left: auto;
+        width: max-content;
+
+        ul li{
+            color:hsl(0, 0%, 100%);
+            cursor: pointer;
+            display: inline;
+            font-size: 1.5rem;
+            margin: 0 0.5rem;
+        }
+    }
 }
 
-.header-fixed{
-	width: 100%;
-	z-index: $z-index-header-fixed;
 
-	&.hidden{
-		@include fadeOut(0,1s);
-	}
-
-	&.blur{
-		background-color: rgba(73, 73, 73, 0.8);
-		overflow: hidden;
-
-		h4{
-			color: #ffffff;
-		}
-	}
-}
-
-.header-fixed .header-container{
-	display: flex;
-	justify-content: space-between;
-
-	.logo{
-		top: 0;
-		z-index: $z-index-logo;
-	
-		img{
-			height: 11vh;
-		}
-	}
-
-	// .header-menu{
-
-	// 	@include respond-to('wsga'){			
-	// 		margin-top: 1em;
-	// 	}
-	// }
-}
-
-.header-fixed .header-bar{
-	height: 3.5em;
-	overflow: hidden;
-	padding-top: 1em;
-	width: 100%;
-	z-index: $z-index-header-bar;
-
-	&.blur{
-		background-color: $dark-grey;
-		filter: blur(2px);
-		opacity: 0.8;
-		overflow: hidden;
-	}
-}
