--- a/sass/mobile-app.scss
+++ b/sass/mobile-app.scss
@@ -5,25 +5,20 @@
 @import "base/contents";
 @import "base/normalize";
 @import "base/typography";
-@import "layout/mobile/master-mobile";
-@import "layout/mobile/header-mobile";
-@import "layout/mobile/footer-mobile";
-@import "pages/blog/mobile/post-mobile";
-@import "pages/blog/mobile/posts-mobile";
-@import "components/mobile/columns-mobile";
-@import "components/mobile/directory-mobile";
-@import "components/mobile/featured-mobile";
-@import "components/mobile/micro-featured-mobile";
-@import "components/mobile/menu-mobile";
-@import "components/mobile/slider-mobile";
-@import "components/mobile/form-mobile";
-@import "components/mobile/tabs-mobile";
-@import "components/mobile/gallery-mobile";
-@import "components/mobile/spinner-mobile";
-@import "components/mobile/archive-mobile";
-@import "components/mobile/shop-form-mobile";
-@import "components/mobile/errors-mobile";
-@import "components/mobile/blog-mobile";
-
+@import "layout/mobile/master";
+@import "layout/mobile/header";
+@import "layout/mobile/footer";
+@import "layout/mobile/columns";
+@import "components/mobile/featured-button";
+@import "components/mobile/featured";
+@import "components/mobile/plus-minus-button";
+@import "components/mobile/slider";
+@import "components/mobile/textual-banner";
+@import "pages/cart/mobile/cart";
+@import "pages/checkout/mobile/checkout";
+@import "pages/contact/mobile/contact";
+@import "pages/home/mobile/home";
+@import "pages/product/mobile/product";
+@import "pages/products/mobile/products";
 
 
