--- a/sass/components/desktop/_featured-button.scss
+++ b/sass/components/desktop/_featured-button.scss
@@ -2,7 +2,7 @@
     background-image: linear-gradient(to right, $primary-color 0%, $secondary-color 50%, $primary-color 100%);
     background-size: 200% auto;
     border-radius: 1rem;
-    border: none;
+    border: 0.1rem solid hsl(0, 0%, 100%);
     color: white;
     cursor: pointer;
     font-size: 1.2rem;
@@ -11,7 +11,7 @@
 	line-height: 0px;
     margin-top: 1rem;
 	min-width: 20%;
-	padding: 1rem 2rem;
+	padding: 1.2rem 2rem;
 	transition: 0.5s;
 	text-decoration: none;
 
