--- a/sass/components/desktop/_featured.scss
+++ b/sass/components/desktop/_featured.scss
@@ -8,75 +8,76 @@
         text-align: center;
     }
 
-    .featured-element-image-price{
-        position: relative;
-    }
-
-    .featured-element-price{
-        align-content: center;
-        background-color: hsla(0, 0%, 0%, 0.5);
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        justify-content: center;
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        z-index: $z-index-featured-elements;
-
-        &:hover{
-            cursor: pointer;
-            opacity: 1;
-        }     
-        
-        .featured-element-price h4{
-            font-size: 2rem;
-            text-align: center;
-        }
-    }
+    .featured-element{
+        border: 0.3rem solid white;
+        border-radius: 1rem;
     
-    .featured-element-image{
-        position: relative;
-        z-index: $z-index-featured-elements;
-
-        img{
-            border-top-left-radius: 0.5rem;
-            border-top-right-radius: 0.5rem;
+        .featured-element-image-price{
+            position: relative;
         }
-    }
-
-    .featured-element-description{
-        border: 1px solid $primary-color-light;
-        border-top: 0;
-        border-bottom-left-radius: 0.5rem;
-        border-bottom-right-radius: 0.5rem;
-        padding: 1rem;
-    }
-
-    .featured-element-title{
-        margin-bottom: 0.5rem;
-
-        h2{
-            font-size: 1rem;
+    
+        .featured-element-price{
+            align-content: center;
+            background-color: hsla(0, 0%, 0%, 0.5);
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            justify-content: center;
+            opacity: 0;
+            position: absolute;
+            width: 100%;
+            z-index: $z-index-featured-elements;
+    
+            &:hover{
+                cursor: pointer;
+                opacity: 1;
+            }     
+            
+            .featured-element-price h4{
+                font-size: 2rem;
+                text-align: center;
+            }
         }
-    }
-
-    .featured-element-category{
-        margin-bottom: 0.5rem;
-
-        h3{
-            color:$secondary-color;
-            font-family: $font-stack-condensed;
-            font-size: 1rem;
+        
+        .featured-element-image{
+            position: relative;
+            z-index: $z-index-featured-elements;
+    
+            img{
+                border-top-left-radius: 0.5rem;
+                border-top-right-radius: 0.5rem;
+            }
         }
-    }
-
-    .featured-element-text{
-        margin-bottom: 0.5rem;
-
-        p{
-            font-weight: 300;
-            font-size: 1rem;
+    
+        .featured-element-description{
+            padding: 1rem;
+        }
+    
+        .featured-element-title{
+            margin-bottom: 0.5rem;
+    
+            h2{
+                font-size: 1rem;
+            }
+        }
+    
+        .featured-element-category{
+            margin-bottom: 0.5rem;
+    
+            h3{
+                color:$secondary-color;
+                font-family: $font-stack-condensed;
+                font-size: 1rem;
+            }
+        }
+    
+        .featured-element-text{
+            margin-bottom: 0.5rem;
+    
+            p{
+                font-weight: 300;
+                font-size: 1rem;
+            }
         }
     }
 }
