--- a/sass/pages/cart/mobile/_cart.scss
+++ b/sass/pages/cart/mobile/_cart.scss
@@ -66,7 +66,7 @@
             text-align: center;
         }
 
-        #cart-resume-element-total{
+        &#cart-resume-element-total{
             border-top: 0.1rem solid hsl(0, 0%, 100%);
             padding-top: 0.5rem;
         }
