--- a/sass/pages/products/desktop/_products.scss
+++ b/sass/pages/products/desktop/_products.scss
@@ -75,6 +75,7 @@
         }
         
         .products-list-gallery-product-add-to-cart button{
+            border-bottom: 0;
             border-radius: 0;
             font-size: 1rem;
             padding: 1.5rem 0;
