--- a/style/app.css
+++ b/style/app.css
@@ -433,7 +433,7 @@ body {
 }
 
 main {
-  margin: 2rem 0;
+  margin: 1rem 0;
   width: 100%;
 }
 
@@ -553,7 +553,7 @@ footer .footer-element p {
   background-image: linear-gradient(to right, #2a4cbb 0%, #02a8b1 50%, #2a4cbb 100%);
   background-size: 200% auto;
   border-radius: 1rem;
-  border: none;
+  border: 0.1rem solid white;
   color: white;
   cursor: pointer;
   font-size: 1.2rem;
@@ -562,7 +562,7 @@ footer .footer-element p {
   line-height: 0px;
   margin-top: 1rem;
   min-width: 20%;
-  padding: 1rem 2rem;
+  padding: 1.2rem 2rem;
   transition: 0.5s;
   text-decoration: none;
 }
@@ -579,10 +579,14 @@ footer .footer-element p {
   margin: 2rem 0;
   text-align: center;
 }
-.featured .featured-element-image-price {
+.featured .featured-element {
+  border: 0.3rem solid white;
+  border-radius: 1rem;
+}
+.featured .featured-element .featured-element-image-price {
   position: relative;
 }
-.featured .featured-element-price {
+.featured .featured-element .featured-element-price {
   align-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
@@ -594,47 +598,43 @@ footer .footer-element p {
   width: 100%;
   z-index: 1001;
 }
-.featured .featured-element-price:hover {
+.featured .featured-element .featured-element-price:hover {
   cursor: pointer;
   opacity: 1;
 }
-.featured .featured-element-price .featured-element-price h4 {
+.featured .featured-element .featured-element-price .featured-element-price h4 {
   font-size: 2rem;
   text-align: center;
 }
-.featured .featured-element-image {
+.featured .featured-element .featured-element-image {
   position: relative;
   z-index: 1001;
 }
-.featured .featured-element-image img {
+.featured .featured-element .featured-element-image img {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
-.featured .featured-element-description {
-  border: 1px solid #5e7de4;
-  border-top: 0;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+.featured .featured-element .featured-element-description {
   padding: 1rem;
 }
-.featured .featured-element-title {
+.featured .featured-element .featured-element-title {
   margin-bottom: 0.5rem;
 }
-.featured .featured-element-title h2 {
+.featured .featured-element .featured-element-title h2 {
   font-size: 1rem;
 }
-.featured .featured-element-category {
+.featured .featured-element .featured-element-category {
   margin-bottom: 0.5rem;
 }
-.featured .featured-element-category h3 {
+.featured .featured-element .featured-element-category h3 {
   color: #02a8b1;
   font-family: "Ubuntu Condensed", sans-serif;
   font-size: 1rem;
 }
-.featured .featured-element-text {
+.featured .featured-element .featured-element-text {
   margin-bottom: 0.5rem;
 }
-.featured .featured-element-text p {
+.featured .featured-element .featured-element-text p {
   font-weight: 300;
   font-size: 1rem;
 }
@@ -796,11 +796,11 @@ footer .footer-element p {
 .cart .cart-resume .cart-resume-element h3 {
   text-align: center;
 }
-.cart .cart-resume .cart-resume-element #cart-resume-element-total {
+.cart .cart-resume .cart-resume-element#cart-resume-element-total {
   border-top: 0.1rem solid white;
   padding-top: 0.5rem;
 }
-.cart .cart-resume .cart-buttons {
+.cart .cart-buttons {
   display: flex;
   justify-content: space-between;
   margin-top: 2rem;
@@ -879,23 +879,23 @@ footer .footer-element p {
   border-top: 0.1rem solid white;
   padding-top: 0.5rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form {
+.checkout .checkout-submit .checkout-payment-form {
   margin-top: 2rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-form-element {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element {
   margin-bottom: 1rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio,
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio-label {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio,
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio-label {
   display: inline;
   margin-right: 0.5rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio label,
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio-label label {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio label,
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio-label label {
   color: white;
   font-weight: 600;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-button {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-button {
   margin-left: auto;
   width: max-content;
 }
@@ -1071,6 +1071,7 @@ footer .footer-element p {
   font-size: 1.2rem;
 }
 .products .products-list-gallery-product .products-list-gallery-product-add-to-cart button {
+  border-bottom: 0;
   border-radius: 0;
   font-size: 1rem;
   padding: 1.5rem 0;
