--- a/style/mobile-app.css
+++ b/style/mobile-app.css
@@ -565,7 +565,7 @@ footer .footer-element p {
   background-image: linear-gradient(to right, #2a4cbb 0%, #02a8b1 50%, #2a4cbb 100%);
   background-size: 200% auto;
   border-radius: 1rem;
-  border: none;
+  border: 0.1rem solid white;
   color: white;
   cursor: pointer;
   font-size: 1.2rem;
@@ -574,7 +574,7 @@ footer .footer-element p {
   line-height: 0px;
   margin-top: 1rem;
   min-width: 20%;
-  padding: 1rem 2rem;
+  padding: 1.2rem 2rem;
   transition: 0.5s;
   text-decoration: none;
 }
@@ -592,12 +592,14 @@ footer .footer-element p {
   text-align: center;
 }
 .featured .featured-element {
+  border: 0.3rem solid white;
+  border-radius: 1rem;
   margin-bottom: 2rem;
 }
-.featured .featured-element-image-price {
+.featured .featured-element .featured-element-image-price {
   position: relative;
 }
-.featured .featured-element-price {
+.featured .featured-element .featured-element-price {
   align-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
@@ -609,47 +611,47 @@ footer .footer-element p {
   width: 100%;
   z-index: 1001;
 }
-.featured .featured-element-price:hover {
+.featured .featured-element .featured-element-price:hover {
   cursor: pointer;
   opacity: 1;
 }
-.featured .featured-element-price h4 {
+.featured .featured-element .featured-element-price h4 {
   font-size: 2rem;
   text-align: center;
 }
-.featured .featured-element-image {
+.featured .featured-element .featured-element-image {
   position: relative;
   z-index: 1000;
 }
-.featured .featured-element-image img {
+.featured .featured-element .featured-element-image img {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
-.featured .featured-element-description {
+.featured .featured-element .featured-element-description {
   border: 1px solid #5e7de4;
   border-top: 0;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
   padding: 1rem;
 }
-.featured .featured-element-title {
+.featured .featured-element .featured-element-title {
   margin-bottom: 0.5rem;
 }
-.featured .featured-element-title h2 {
+.featured .featured-element .featured-element-title h2 {
   font-size: 1rem;
 }
-.featured .featured-element-category {
+.featured .featured-element .featured-element-category {
   margin-bottom: 0.5rem;
 }
-.featured .featured-element-category h3 {
+.featured .featured-element .featured-element-category h3 {
   color: #02a8b1;
   font-family: "Ubuntu Condensed", sans-serif;
   font-size: 1rem;
 }
-.featured .featured-element-text {
+.featured .featured-element .featured-element-text {
   margin-bottom: 0.5rem;
 }
-.featured .featured-element-text p {
+.featured .featured-element .featured-element-text p {
   font-weight: 300;
   font-size: 1rem;
 }
@@ -659,7 +661,7 @@ footer .footer-element p {
   height: 30;
 }
 .plus-minus-button .plus-minus-input {
-  width: 15%;
+  width: 100%;
 }
 .plus-minus-button .plus-minus-input input {
   border: 0;
@@ -814,7 +816,7 @@ footer .footer-element p {
 .cart .cart-resume-element h3 {
   text-align: center;
 }
-.cart .cart-resume-element #cart-resume-element-total {
+.cart .cart-resume-element#cart-resume-element-total {
   border-top: 0.1rem solid white;
   padding-top: 0.5rem;
 }
@@ -867,13 +869,12 @@ footer .footer-element p {
   width: 100%;
 }
 .checkout .checkout-submit {
-  padding: 1rem 10%;
-  width: 80%;
+  padding: 1rem 0;
+  width: 100%;
 }
 .checkout .checkout-submit .checkout-resume {
   border: 0.1rem solid white;
   margin-left: auto;
-  margin-top: 1rem;
   width: 100%;
 }
 .checkout .checkout-submit .checkout-resume .checkout-resume-title {
@@ -892,28 +893,28 @@ footer .footer-element p {
 .checkout .checkout-submit .checkout-resume .checkout-resume-element h3 {
   text-align: center;
 }
-.checkout .checkout-submit .checkout-resume .checkout-resume-element #checkout-resume-element-total {
+.checkout .checkout-submit .checkout-resume .checkout-resume-element#checkout-resume-element-total {
   border-top: 0.1rem solid white;
   padding-top: 0.5rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form {
+.checkout .checkout-submit .checkout-payment-form {
   margin-top: 2rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-form-element {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element {
   margin-bottom: 1rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payent-form-radio,
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payent-form-radio-label {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio,
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio-label {
   display: inline;
   margin-right: 0.5rem;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payent-form-radio label,
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payent-form-radio-label label {
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio label,
+.checkout .checkout-submit .checkout-payment-form .checkout-payment-form-element .checkout-payment-form-radio-label label {
   color: white;
   font-weight: 600;
 }
-.checkout .checkout-submit .checkout-resume .checkout-payment-form .checkout-payment-button {
-  margin-left: auto;
+.checkout .checkout-submit .checkout-payment-button {
+  margin: 0 auto;
   width: max-content;
 }
 
@@ -959,35 +960,35 @@ footer .footer-element p {
   color: white;
   font-size: 1rem;
 }
-.contact .contact-info .contact-form-element {
+.contact .contact-form-element {
   margin-bottom: 1rem;
 }
-.contact .contact-info .contact-form-element .contact-form-element-label {
+.contact .contact-form-element .contact-form-element-label {
   margin-bottom: 0.5rem;
   width: 100%;
 }
-.contact .contact-info .contact-form-element .contact-form-element-label label {
+.contact .contact-form-element .contact-form-element-label label {
   color: white;
 }
-.contact .contact-info .contact-form-element .contact-form-element-input {
+.contact .contact-form-element .contact-form-element-input {
   width: 100%;
 }
-.contact .contact-info .contact-form-element .contact-form-element-input input {
+.contact .contact-form-element .contact-form-element-input input {
   padding: 0.2rem 2%;
   width: 96%;
 }
-.contact .contact-info .contact-form-element .contact-form-element-input:focus {
+.contact .contact-form-element .contact-form-element-input:focus {
   outline: 0;
 }
-.contact .contact-info .contact-form-element .contact-form-element-input textarea {
+.contact .contact-form-element .contact-form-element-input textarea {
   height: 20vh;
   padding: 0.2rem 2%;
   width: 98%;
 }
-.contact .contact-info .contact-form-element .contact-form-element-input:focus {
+.contact .contact-form-element .contact-form-element-input:focus {
   outline: 0;
 }
-.contact .contact-info .contact-form-element .contact-form-element-button {
+.contact .contact-form-element .contact-form-element-button {
   margin: 0 auto;
   width: max-content;
 }
@@ -1079,7 +1080,7 @@ footer .footer-element p {
 .products .products-list-topbar .products-list-topbar-filter .products-list-topbar-filter-element:focus {
   outline: none;
 }
-.products .products-list-topbar .products-list-gallery-product {
+.products .products-list-gallery-product {
   border: 0.3rem solid white;
   border-radius: 0.5em;
   box-shadow: 5px 5px 14px 0px #333333;
@@ -1087,28 +1088,29 @@ footer .footer-element p {
   margin-bottom: 2rem;
   overflow: hidden;
 }
-.products .products-list-topbar .products-list-gallery-product .products-list-gallery-product-image {
+.products .products-list-gallery-product .products-list-gallery-product-image {
   position: relative;
 }
-.products .products-list-topbar .products-list-gallery-product .products-list-gallery-product-title {
+.products .products-list-gallery-product .products-list-gallery-product-title {
   padding: 1rem 0;
 }
-.products .products-list-topbar .products-list-gallery-product .products-list-gallery-product-title h2 {
+.products .products-list-gallery-product .products-list-gallery-product-title h2 {
   font-size: 1.2rem;
   text-align: center;
 }
-.products .products-list-topbar .products-list-gallery-product .products-list-gallery-product-price {
+.products .products-list-gallery-product .products-list-gallery-product-price {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0.5rem;
   position: absolute;
   right: 0;
   top: 0;
 }
-.products .products-list-topbar .products-list-gallery-product .products-list-gallery-product-price span {
+.products .products-list-gallery-product .products-list-gallery-product-price span {
   color: white;
   font-size: 1.2rem;
 }
-.products .products-list-topbar .products-list-gallery-product .products-list-gallery-product-add-to-cart button {
+.products .products-list-gallery-product .products-list-gallery-product-add-to-cart button {
+  border-bottom: 0;
   border-radius: 0;
   font-size: 1rem;
   padding: 1.5rem 0;
