--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -3,7 +3,8 @@ $z-index-featured-image: 1000;
 $z-index-slider-image: 1000;
 $z-index-featured-elements: 1001;
 $z-index-slider-elements: 1001;
-$z-index-header: 2000;
+$z-index-header: 5000;
+$z-index-header-menu: 5000;
 $z-index-overlay: 5001;
 $z-index-spinner: 5002;
 
