--- a/sass/layout/mobile/_header.scss
+++ b/sass/layout/mobile/_header.scss
@@ -26,6 +26,36 @@ header{
             }
         }
     }
+
+	.header-menu{
+		background-color: hsl(0, 0%, 100%);
+		height: 100vh;
+		left: 0;
+		position: fixed;
+		top: -100vh;
+		transition: top 0.5s;
+		width: 100%;
+		z-index: $z-index-header-menu;
+
+		&.active{
+			top: 0;
+		}
+
+		ul{
+			margin: 70% auto;
+			height: max-content;
+			width: 35%;
+		}
+
+		ul li{
+			margin-bottom: 1rem;
+		}
+
+		ul li a{
+			color: $primary-color;
+			font-size: 2rem;
+		}
+	}
 	
 	.header-menu-hamburger{
 		margin-left: auto;
@@ -48,6 +78,7 @@ header{
 		}
 
 		&.active span:first-of-type {
+			background: $primary-color;
 			transform: rotate(45deg) translate(1.1em, 1.1em);
 		}
 
@@ -56,11 +87,12 @@ header{
 		}
 
 		&.active span:last-of-type {
+			background: $primary-color;
 			transform: rotate(-45deg) translate(1px, -1px);
 		}
 
 		span {
-			background: white;
+			background: hsl(0, 0%, 100%);
 			border-radius: 1rem;
 			display: block;
 			height: 5px;
@@ -71,4 +103,6 @@ header{
 			width: 100%;
 		}
 	}
+
+
 }
